2012-12-10  Jon Lee  <jonlee@apple.com>

        Keep track of plug-in snapshots clicked by user
        https://bugs.webkit.org/show_bug.cgi?id=103206
        <rdar://problem/12746483>

        Reviewed by Anders Carlsson.

        Create a new provider class for the web context that maintains a mapping of the plug-in origins
        allowed to auto-start for a specific page origin.

        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::WebPage): Create and set WebPlugInClient.

        Implement WebCore::PlugInClient.
        * WebProcess/WebCoreSupport/WebPlugInClient.cpp: Added.
        (WebKit::WebPlugInClient::WebPlugInClient):
        (WebKit::WebPlugInClient::~WebPlugInClient):
        (WebKit::WebPlugInClient::pageDestroyed):
        (WebKit::WebPlugInClient::isAutoStartOrigin): Forward to WebProcess.
        (WebKit::WebPlugInClient::addAutoStartOrigin): Forward to WebProcess.
        * WebProcess/WebCoreSupport/WebPlugInClient.h: Added.

        * WebProcess/WebProcess.cpp: Maintains a copy of the hash set.
        (WebKit::WebProcess::isPlugInAutoStartOrigin): Look for the hash in the set.
        (WebKit::WebProcess::addPlugInAutoStartOrigin): Tell the UI process to add the hash for the page.
        (WebKit::WebProcess::didAddPlugInAutoStartOrigin): Add the hash to the cached set.
        * WebProcess/WebProcess.h:
        * WebProcess/WebProcess.messages.in: Add DidAddPlugInAutoStartOrigin.

        Add the auto-start provider.
        * UIProcess/WebContext.cpp:
        (WebKit::WebContext::WebContext): Initialize the provider.
        (WebKit::WebContext::addPlugInAutoStartOriginHash): Forward to the provider.
        * UIProcess/WebContext.h:
        * UIProcess/WebContext.messages.in: Add AddPlugInAutoStartOriginHash.

        The provider class maintains a map of page domains to hashes, and a set of all the hashes.
        The latter will be used to initialize new web processes without having to crawl through the
        whole map.